# id3v2_rs

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs  utils.rs
src/tag/: encoding.rs  extended_header.rs  header.rs  mod.rs
src/tag/frame/: frame_id.rs  frame_type.rs  mod.rs
