[package]
name = "id3v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4.18"
nom = "7.1.3"
simple_logger = "4.1.0"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
